Fixing mobile nav covering half the screen while invisible

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -74,6 +74,7 @@ body {
 #hamburger__toggle:checked + .nav-bar__list {
   width: 100%;
   visibility: visible;
+  display: block;
   opacity: 1;
   background-color: var(--black);
 }
@@ -148,8 +149,10 @@ body {
 .nav-bar__list {
   text-align: center;
   width: 100%;
+  height: 100%;
   visibility: hidden;
   opacity: 0;
+  display: none;
   margin-top: -3px;
   transition: all 0.25s ease-in-out;
 }
